--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,20 +1,22 @@
 {
   "name": "inventory_management_system_backend",
   "version": "1.0.0",
-  "proxy": "http://localhost:3001",
   "description": "Inventory Management System Backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "start": "nodemon index.js",
+    "server": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "mongoose": "^7.2.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
