--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
-  "dependencies": {
-    "dotenv": "^16.4.7"
-  }
+  "name": "inventory-management-system",
+  "version": "1.0.0",
+  "description": "Full Stack Inventory Management System",
+  "scripts": {
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd Backend && npm start",
+    "client": "cd Frontend/inventory_management_system && npm start",
+    "build": "cd Frontend/inventory_management_system && npm run build",
+    "install-all": "npm install && cd Backend && npm install && cd ../Frontend/inventory_management_system && npm install"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
+  },
+  "keywords": [
+    "inventory",
+    "management",
+    "system"
+  ],
+  "author": "",
+  "license": "ISC"
 }
